change format code

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <h1 class="card__title">Get <span>insights</span> that<br class="card__cut"> help your business grow.</h1>
       <p class="card__introduction">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
-      <h2 class="card__Analysis">
-        <div class="card__proof">10k+ <span>companies</span></div>
-        <div class="card__proof">314 <span>templates</span></div>
-        <div class="card__proof">12M+ <span>queries</span></div> 
-      </h2>
+      <ul class="card__list">
+        <li>10k+ <span>companies</span></li>
+        <li>314 <span>templates</span></li>
+        <li>12M+ <span>queries</span></li> 
+      </ul>
     </section>
   </main>
   <div class="attribution">
